<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project Licensed under the 
	Apache License, Version 2.0 (the "License"); you may not use this file except 
	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->

<!-- This file contains resource definitions for displayed strings, allowing 
	them to be changed based on the locale and options. -->

<resources>
	<!-- Simple strings. -->
	<string name="back">Back</string>
	<string name="clear">Clear</string>

	<!-- This is a complex string containing style runs. -->
	<string name="main_label">
		Hello
		<u>
			th
			<ignore>e</ignore>
			re
		</u>
		,
		<i>you</i>
		<b>Activity</b>
		!
	</string>
	<string name="search">Search</string>
	<string name="search_languages">Search languages</string>
	<string name="search_countries">Search countries</string>
	<string name="ethnodroid_app">Ethnodroid</string>
	<string name="country_name_title">Country</string>
	<string name="population_title">Population</string>
	<string name="region_title">Region</string>
	<string name="language_iso_code_title">Language ISO code</string>
	<string name="country_iso_code_title">Country ISO code</string>
	<string name="language_map_title">Language map</string>
	<string name="alternate_names_title">Alternate names</string>
	<string name="dialects_title">Dialects</string>
	<string name="classification_title">Classification</string>
	<string name="language_use_title">Language use</string>
	<string name="language_development_title">Development</string>
	<string name="writing_system_title">Writing system</string>
	<string name="comments_title">Comments</string>
	<string name="ethnologue_url">http://www.ethnologue.com</string>
	<string name="languages">Languages</string>
	<string name="countries">Countries</string>
	<string name="loading">Loading...</string>
	<string name="close">Close</string>
	<string name="no_country_info_found">No country information found</string>
	<string name="no_language_info_found">No language information found</string>
	<string name="no_language_family_info_found">No language family information found</string>
	<string name="linguistic_lineage_title">Linguistic Lineage:</string>
</resources>

