<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file describes the layout of the main SkeletonApp activity
     user interface.
 -->

<!-- The top view is a layout manager that places its child views into
     a row, here set to be vertical (so the first is at the top) -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- First view is a text editor.  We want it to use all available
         horizontal space, and stretch to fill whatever vertical space
         is available to it.  Note the use of the "id" attribute, which
         allows us to find this object from the Java code. -->

    <!-- Next view is another linear layout manager, now horizontal.  We
         give it a custom background; see colors.xml for the definition
         of drawable/semi_black-->
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/topImage" android:src="@drawable/ethno_top" android:layout_gravity="center_horizontal" android:clickable="true" android:paddingBottom="6dip"></ImageView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/languagePattern" android:drawableRight="@android:drawable/ic_menu_search"></EditText>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/languageScrollView" android:scrollbars="vertical">
    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/semi_black" android:layout_width="match_parent">
        <ViewSwitcher android:id="@+id/layoutViewSwitcher" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/languateInfoTableLayout" android:shrinkColumns="1" android:paddingBottom="6dip">
                <TableRow android:layout_width="wrap_content" android:id="@+id/isoCodeRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/iso_codes_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/isoCodesTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/isoCodesText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/countryNameRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/country_name_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/countryNameTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/countryNameText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/populationRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/population_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/populationTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/populationText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/regionRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/region_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/regionTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/regionText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/languageMapRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/language_map_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/languageMapTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:clickable="true" android:id="@+id/languageMapText" style="@style/Hyperlink"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/alternateNamesRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/alternate_names_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/alternateNamesTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/alternateNamesText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/dialectsRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/dialects_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/dialectsTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/dialectsText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/classificationRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/classification_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/classificationTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/classificationText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/languageUseRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/language_use_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/languageUseTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/languageUseText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/languageDevelopmentRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/language_development_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/languageDevelopmentTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/languageDevelopmentText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/writingSystemRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/writing_system_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/writingSystemTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/writingSystemText" style="@style/InfoItem"></TextView>
                </TableRow>
                <TableRow android:layout_width="wrap_content" android:id="@+id/commentsRow" android:layout_height="wrap_content">
                    <TextView android:layout_height="wrap_content" android:text="@string/comments_title" android:layout_width="wrap_content" android:paddingRight="6dip" android:id="@+id/commentsTitle" style="@style/InfoItemTitle"></TextView>
                    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/commentsText" style="@style/InfoItem"></TextView>
                </TableRow>
            </TableLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" android:id="@+id/errorText" style="@style/ErrorMessage"></TextView>
        </ViewSwitcher>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@drawable/semi_black" android:layout_width="match_parent">

        <!-- On the left: the "back" button.  See styles.xml for the
             definition of style/ActionButton, which we use to hold
             common attributes that are used for both this and the
             clear button.  See strings.xml for the definition of
             string/back. -->
        <Button android:layout_height="wrap_content" android:id="@+id/search" android:text="@string/search" style="@style/ActionButton" android:drawableLeft="@android:drawable/ic_menu_search" android:layout_width="0px" android:layout_weight="1" android:paddingLeft="12dip" android:paddingRight="3dip"></Button>

        <!-- In the middle: a custom image, -->

        <!-- On the right: another button, this time with its text color
             changed to red.  Again, see colors.xml for the definition. -->
        <Button android:id="@+id/clear" style="@style/ActionButton"
            android:text="@string/clear" android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel" android:layout_weight="1" android:layout_width="0px" android:paddingLeft="3dip" android:paddingRight="12dip"/>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>


